--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
   pull_request:
     branches:
       - master
+  workflow_dispatch:
 
 # cancel already running builds of the same branch or pull request
 concurrency:
@@ -30,7 +31,7 @@ env:
 jobs:
   linux:
     name: Linux Build
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     env:
       CC:                       ccache gcc
@@ -43,10 +44,10 @@ jobs:
 
     steps:
       - name: Checkout Geany-Plugins
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Checkout Geany
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: geany/geany
           path: ${{ env.GEANY_SOURCE_PATH }}
@@ -58,10 +59,10 @@ jobs:
       # the creation of the cache item at the end) in combination with "restore-keys" as fallback
       - name: Prepare ccache timestamp
         id: ccache_cache_timestamp
-        run: echo "::set-output name=timestamp::$(date +%Y-%m-%d-%H-%M)"
+        run: echo "timestamp=$(date +%Y-%m-%d-%H-%M)" >> $GITHUB_OUTPUT
 
       - name: Configure ccache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ env.CCACHE_DIR }}
           key: ${{ runner.os }}-${{ github.job }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
@@ -70,11 +71,11 @@ jobs:
       - name: Prepare Geany Cache Key
         id: prepare_geany_cache_key
         working-directory: ${{ env.GEANY_SOURCE_PATH }}
-        run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
+        run: echo "commit_hash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: Configure Geany Cache
         id: geany_cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ env.GEANY_CACHE_PATH }}
           key: ${{ runner.os }}-${{ github.job }}-geany-cache-${{ steps.prepare_geany_cache_key.outputs.commit_hash }}
@@ -125,7 +126,7 @@ jobs:
             # markdown
             libmarkdown2-dev
             # markdown/webhelper
-            libwebkitgtk-3.0-dev
+            libwebkit2gtk-4.0-dev
             # pretty-printer
             libxml2-dev
             # spellcheck
@@ -169,3 +170,117 @@ jobs:
       - name: ccache statistics
         if: ${{ env.DEBUG == '1' }}
         run: ccache --show-stats
+
+  mingw64:
+    name: Mingw-w64 Build (Windows)
+    runs-on: ubuntu-20.04
+
+    env:
+      GEANY_SOURCE_PATH:        ${{ github.workspace }}/.geany_source
+      GEANY_CACHE_PATH:         ${{ github.workspace }}/.geany_cache
+      INFRASTRUCTURE_PATH:      ${{ github.workspace }}/.infrastructure
+      BUILDER_PATH:             ${{ github.workspace }}/.infrastructure/builders
+      DOCKER_REGISTRY:          "ghcr.io"
+      DOCKER_IMAGE_NAME:        "geany-mingw64-ci"
+      DOCKER_IMAGE_TAG:         "ghcr.io/geany/geany-mingw64-ci:latest"
+
+    steps:
+      - name: Checkout Geany-Plugins
+        uses: actions/checkout@v3
+
+      - name: Checkout Geany
+        uses: actions/checkout@v3
+        with:
+          repository: geany/geany
+          path: ${{ env.GEANY_SOURCE_PATH }}
+          token: ${{ github.token }}
+
+      - name: Checkout Build Scripts
+        uses: actions/checkout@v3
+        with:
+          ref: master
+          repository: geany/infrastructure
+          path: ${{ env.INFRASTRUCTURE_PATH }}
+          token: ${{ github.token }}
+
+      - uses: jwalton/gh-find-current-pr@v1
+        id: find_pull_request
+        with:
+          state: open
+
+      - name: Define environment variables
+        run: |
+          echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "GITHUB_PULL_REQUEST=${GITHUB_PULL_REQUEST}" >> $GITHUB_ENV
+          echo "GITHUB_PULL_REQUEST_OR_REF=${GITHUB_PULL_REQUEST:-${{ github.ref_name }}}" | tr '/' '-' >> $GITHUB_ENV
+        env:
+          GITHUB_PULL_REQUEST: ${{ steps.find_pull_request.outputs.pr }}
+
+      - name: Prepare Geany Cache Key
+        id: prepare_geany_cache_key
+        working-directory: ${{ env.GEANY_SOURCE_PATH }}
+        run: echo "commit_hash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Configure Geany Cache
+        id: geany_cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.GEANY_CACHE_PATH }}
+          key: ${{ runner.os }}-${{ github.job }}-geany-mingw64-cache-${{ steps.prepare_geany_cache_key.outputs.commit_hash }}
+
+      - name: Show Environment
+        if: ${{ env.DEBUG == '1' }}
+        run: |
+            env | sort
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull Or Build Docker Image
+        working-directory: ${{ env.BUILDER_PATH }}
+        run: |
+          docker_image_created=
+          docker pull ${{ env.DOCKER_IMAGE_TAG }} || true
+          if $(docker image inspect ${{ env.DOCKER_IMAGE_TAG }} --format="ignored" >/dev/null 2>&1); then
+              docker tag ${{ env.DOCKER_IMAGE_TAG }} ${{ env.DOCKER_IMAGE_NAME }}
+              docker_image_created=$(docker image inspect ${{ env.DOCKER_IMAGE_NAME }} --format='{{ index .Config.Labels "org.opencontainers.image.created" }}')
+              echo "Docker image built on: ${docker_image_created}"
+          fi
+
+          bash start_build.sh --log-to-stdout --mingw64 --rebuild-images
+          docker_image_created_new=$(docker image inspect ${{ env.DOCKER_IMAGE_NAME }} --format='{{ index .Config.Labels "org.opencontainers.image.created" }}')
+          # tag the image
+          if [ "${docker_image_created}" != "${docker_image_created_new}" ]; then
+              docker tag ${{ env.DOCKER_IMAGE_NAME }} ${{ env.DOCKER_IMAGE_TAG }}
+          fi
+
+      - name: Copy Geany Installer From Cache
+        if: steps.geany_cache.outputs.cache-hit == 'true'
+        run: |
+            cp ${{ env.GEANY_CACHE_PATH }}/geany-*.exe  ${{ env.BUILDER_PATH }}/output/mingw64/
+
+      - name: Build Geany
+        if: steps.geany_cache.outputs.cache-hit != 'true'
+        working-directory: ${{ env.BUILDER_PATH }}
+        run: |
+            bash start_build.sh --log-to-stdout --mingw64 --geany --geany-source "${{ env.GEANY_SOURCE_PATH }}"
+            mkdir -p "${{ env.GEANY_CACHE_PATH }}"
+            cp ${{ env.BUILDER_PATH }}/output/mingw64/geany-*.exe ${{ env.GEANY_CACHE_PATH }}
+
+      - name: Build Geany-Plugins
+        working-directory: ${{ env.BUILDER_PATH }}
+        run: |
+          bash start_build.sh --log-to-stdout --mingw64 --geany-plugins --geany-plugins-source "${{ github.workspace }}"
+
+      - name: Archive Geany-Plugins Installer
+        uses: actions/upload-artifact@v3
+        with:
+          name: geany-plugins-installer-ci-${{ env.SHORT_SHA }}-pr${{ env.GITHUB_PULL_REQUEST_OR_REF }}
+          retention-days: 30
+          path: |
+            ${{ env.BUILDER_PATH }}/output/mingw64/geany-*.exe
+            ${{ env.BUILDER_PATH }}/output/mingw64/geany-*.zip
