Use standard gettext, following Geany core
Standard gettext should be used over GLib's glue these days.
AM_GLIB_GNU_GETTEXT and glib-gettextize are deprecated. This helps
possible meson build (no concrete plans yet) as well as working with
intltool is harder over there. gettext, on the other hand, is supported
out of the box in meson.

Beware, autopoint is a new dependency when building from git,
should not affect tarballs. Also, it's already required by Geany core.

Additionally, autogen.sh follows Geany's autogen.sh more closely,
allowing for out-of-tree builds.

Co-authored-by: Enrico Tröger <enrico.troeger@uvena.de>
Co-authored-by: Colomban Wendling <ban@herbesfolles.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-ACLOCAL_AMFLAGS = -I build/cache -I build -I build/bundled --install
+ACLOCAL_AMFLAGS = -I build/cache -I build -I build/bundled
 AM_DISTCHECK_CONFIGURE_FLAGS = --with-geany-libdir='$${libdir}'
 
 EXTRA_DIST = build/cppcheck-geany-plugins.cfg
