--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ cscope.files
 #-----------------------------------------------------------------------
 # / (root)
 #-----------------------------------------------------------------------
+/ABOUT-NLS
 /aclocal.m4
 /autom4te.cache
 /build/*.pyc
@@ -36,12 +37,11 @@ cscope.files
 /config.log
 /config.status
 /config.sub
+/config.rpath
 /configure
 /debian
 /depcomp
 /install-sh
-/intltool
-/intltool-*
 /libtool
 /localwin32.mk
 /ltmain.sh
@@ -63,10 +63,8 @@ cscope.files
 /po/ChangeLog.save
 /po/*.gmo
 /po/*.header
-/po/.intltool-merge-cache
-/po/LINGUAS
 /po/Makefile.in.in
-/po/Makevars
+/po/Makevars.template
 /po/*.mo
 /po/*.pot
 /po/POTFILES
@@ -76,7 +74,7 @@ cscope.files
 /po/Rules-quot
 /po/*.sed
 /po/*.sin
-/po/stamp-it
+/po/stamp-po
 
 #-----------------------------------------------------------------------
 # TeX
