Add Pinner plugin

--- a/Makefile.am
+++ b/Makefile.am
@@ -121,6 +121,10 @@ if ENABLE_PAIRTAGHIGHLIGHTER
 SUBDIRS += pairtaghighlighter
 endif
 
+if ENABLE_PINNER
+SUBDIRS += pinner
+endif
+
 if ENABLE_POHELPER
 SUBDIRS += pohelper
 endif
