--- a/configure.ac
+++ b/configure.ac
@@ -58,6 +58,7 @@ GP_CHECK_LIPSUM
 GP_CHECK_MARKDOWN
 GP_CHECK_OVERVIEW
 GP_CHECK_PAIRTAGHIGHLIGHTER
+GP_CHECK_PINNER
 GP_CHECK_POHELPER
 GP_CHECK_PRETTYPRINTER
 GP_CHECK_PROJECTORGANIZER
