--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,7 @@ jobs:
             libvte-2.91-dev
             # devhelp
             libwebkit2gtk-4.0-dev
+            libdevhelp-dev
             libwnck-dev
             libgconf2-dev
             zlib1g-dev
