Vimode: implement fold in vimode plugin

--- a/vimode/src/Makefile.am
+++ b/vimode/src/Makefile.am
@@ -37,7 +37,9 @@ vi_srcs = \
 	cmds/excmds.h \
 	cmds/excmds.c \
 	cmds/undo.h \
-	cmds/undo.c
+	cmds/undo.c \
+	cmds/fold.h \
+	cmds/fold.c
 
 vimode_la_SOURCES = \
 	backends/backend-geany.c \
