--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ GP_CHECK_CODENAV
 GP_CHECK_COMMANDER
 GP_CHECK_DEBUGGER
 GP_CHECK_DEFINEFORMAT
+GP_CHECK_EXTERNALTOOLS
 GP_CHECK_GEANYCTAGS
 GP_CHECK_GEANYDOC
 GP_CHECK_GEANYEXTRASEL
