projectorganizer: Add popup panel for navigation
This feature allows quick navigation do document/workspace symbols
based on their names, open files, and line numbers.

The panel's code is mostly stolen from the LSP plugin which in turn
stole it from the Colomban Wendling's Commander plugin.

--- a/projectorganizer/src/Makefile.am
+++ b/projectorganizer/src/Makefile.am
@@ -12,7 +12,11 @@ projectorganizer_la_SOURCES = \
 	prjorg-utils.h \
 	prjorg-utils.c \
 	prjorg-menu.h \
-	prjorg-menu.c
+	prjorg-menu.c \
+	prjorg-goto-panel.h \
+	prjorg-goto-panel.c \
+	prjorg-goto-anywhere.h \
+	prjorg-goto-anywhere.c
 
 projectorganizer_la_CPPFLAGS = $(AM_CPPFLAGS) \
 	-DG_LOG_DOMAIN=\"ProjectOrganizer\"
