geniuspaste: Add dpaste.com

--- a/geniuspaste/data/Makefile.am
+++ b/geniuspaste/data/Makefile.am
@@ -4,6 +4,7 @@ plugin = geniuspaste
 pastebinsdir = $(plugindatadir)/pastebins
 dist_pastebins_DATA = \
 	codepad.org.conf \
+	dpaste.com.conf \
 	dpaste.org.conf \
 	fpaste.org.conf \
 	pastebin.geany.org.conf \
