ci: Enable exhaustive cppcheck checking
Without this cppcheck actually complains that it's not exhaustive to
the point where it exits with an error.

This is likely a cppcheck bug, but it's probably OK for us to use the
exhaustive mode so let's do this at least for now.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ concurrency:
 env:
   CFLAGS: -g -O2 -Werror=pointer-arith -Werror=implicit-function-declaration
   CONFIGURE_FLAGS: --disable-silent-rules
+  CPPCHECKFLAGS: --check-level=exhaustive
   CCACHE_DIR: ${{ github.workspace }}/.ccache
   CCACHE_COMPRESS: true
   CCACHE_MAXSIZE: 1G
