Remove obsolete cppcheck suppressions

--- a/treebrowser/src/Makefile.am
+++ b/treebrowser/src/Makefile.am
@@ -10,7 +10,6 @@ treebrowser_la_CFLAGS = $(AM_CFLAGS) $(GIO_CFLAGS) \
 treebrowser_la_LIBADD = $(COMMONLIBS) $(GIO_LIBS) \
 	$(top_builddir)/utils/src/libgeanypluginutils.la
 
-AM_CPPCHECKFLAGS = --suppress='deallocDealloc:$(srcdir)/treebrowser.c'
-AM_CPPCHECKFLAGS += --suppress='doubleFree:$(srcdir)/treebrowser.c'
+AM_CPPCHECKFLAGS = --suppress='doubleFree:$(srcdir)/treebrowser.c'
 
 include $(top_srcdir)/build/cppcheck.mk
