Backport fixes from the geany-lsp project

--- a/lsp/data/lsp.conf
+++ b/lsp/data/lsp.conf
@@ -115,8 +115,8 @@ autocomplete_window_max_entries=20
 # Maximum number of autocompletion entries shown without scrolling (defining the
 # actual height of the popup)
 autocomplete_window_max_displayed=8
-# The maximum width of the autocompletion popup in pixels
-autocomplete_window_max_width=200
+# The maximum width of the autocompletion popup in displayed characters
+autocomplete_window_max_width=60
 # Whether to automatically apply additional edits defined for the autocompletion
 # entry. These are typically imports of the modules where the inserted symbol is
 # defined
@@ -363,6 +363,16 @@ autocomplete_use_label=false
 autocomplete_hide_after_words=do;then;true;false;end;else
 use_outside_project_dir=true
 use_without_project=true
+#rpc_log=stdout
+#rpc_log_full=true
+#show_server_stderr=true
+
+
+[Nix]
+cmd=nil
+use_without_project=true
+use_outside_project_dir=true
+extra_identifier_characters=-'
 #rpc_log=stdout
 #rpc_log_full=true
 #show_server_stderr=true
