reverted unnecessary changes

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,9 @@ cscope.files
 /po/*.gmo
 /po/*.header
 /po/.intltool-merge-cache
+/po/LINGUAS
 /po/Makefile.in.in
+/po/Makevars
 /po/*.mo
 /po/*.pot
 /po/POTFILES
