--- a/geanygendoc/docs/Makefile.am
+++ b/geanygendoc/docs/Makefile.am
@@ -15,6 +15,6 @@ dist_pluginhtmldoc_DATA = \
 if BUILD_RST
 manual.html: manual.rst manual.css html4css1.css
 	$(AM_V_GEN) $(RST2HTML) -d --strict \
-		--stylesheet-path $(srcdir)/html4css1.css,$(srcdir)/manual.css \
+		--stylesheet-path $(abs_srcdir)/html4css1.css,$(abs_srcdir)/manual.css \
 		$(srcdir)/manual.rst $@
 endif BUILD_RST
