lsp: Update to the latest version from the geany-lsp project

--- a/lsp/data/lsp.conf
+++ b/lsp/data/lsp.conf
@@ -279,10 +279,13 @@ initialization_options={"compilationDatabasePath":  "/home/some_user/"}
 # communication between the client plugin and the server will be stored (can
 # also be 'stdout' or 'stderr')
 rpc_log=stdout
-# Additional files and their mappings to LSP language IDs for which the server
-# is used as well. The Nth item in the list is always a LSP language ID and the
-# (N+1)th item is a glob pattern defining files for which the language ID is
-# used
+# Files and their mappings to LSP language IDs for which the server is used
+# (in addition to the implicit mapping defined by the filetype name and the
+# patterns assigned to this filetype in filetype_extensions.conf). The Nth
+# item in the list is always the LSP language ID and the (N+1)th item is a glob
+# pattern defining files for which the language ID is used
+# To find supported language IDs consult the documentation of the respective
+# LSP (or source code).
 lang_id_mappings=dummylanguage;*.dummy
 
 
@@ -347,6 +350,18 @@ progress_bar_enable=false
 #rpc_log=stdout
 #rpc_log_full=true
 #show_server_stderr=true
+
+
+[HCL]
+# For HCL/Terraform/OpenTofu LSP to work, first configure the corresponding filetype in Geany,
+# see https://wiki.geany.org/config/hcl-terraform for details.
+cmd=terraform-ls serve
+semantic_tokens_enable=true
+#rpc_log=stdout
+#rpc_log_full=false
+#show_server_stderr=true
+# See https://github.com/hashicorp/terraform-ls/blob/main/docs/USAGE.md
+lang_id_mappings=terraform;*.tf;terraform-vars;*.tfvars;terraform-stack;*.tfstack.hcl;terraform-deploy;*.tfdeploy.hcl
 
 
 [Haskell]
