Put auxiliary build files in their own directory
As "AUX" might be a reserved name under Windows, use a somewhat
redundant name to avoid the issue.

Co-authored-by: Colomban Wendling <ban@herbesfolles.org>

--- a/.gitignore
+++ b/.gitignore
@@ -26,35 +26,26 @@ cscope.files
 /autom4te.cache
 /build/*.pyc
 /build/cache
-/build-aux/
+/build/build-aux/
 /build-stamp
 /geanygdb/src/ttyhelper
 /codenames
-/compile
-/config.guess
 /config.h
 /config.h.in*
 /config.log
 /config.status
-/config.sub
-/config.rpath
 /configure
 /debian
-/depcomp
-/install-sh
 /libtool
 /localwin32.mk
-/ltmain.sh
 /m4/
 /make_deb.sh
-/missing
 /mkinstalldirs
 /RUN
 /stamp-h
 /stamp-h1
 /stamp-h.in
 /*.tar.*
-/test-driver
 /TODO.*
 
 #-----------------------------------------------------------------------
