geanygendoc: Use one single stylesheet for compatibility
Some rst2html versions do not handle more than one relative-path
stylesheet, and some Windows setup do not like `$(abs_srcdir)`.

So, workaround all this by manually combining the stylesheets in one
single generate one, which makes it both only one, and relative to the
build directory, both of which should make this simpler and more
compatible.

--- a/geanygendoc/docs/Makefile.am
+++ b/geanygendoc/docs/Makefile.am
@@ -2,9 +2,12 @@ include $(top_srcdir)/build/vars.docs.mk
 plugin = geanygendoc
 pluginhtmldocdir = $(plugindocdir)/html
 
-EXTRA_DIST = \
-	manual.css \
-	html4css1.css
+# CSS used in the manual, in the order it should be used
+MANUAL_CSS = \
+	html4css1.css \
+	manual.css
+
+EXTRA_DIST = $(MANUAL_CSS)
 
 dist_plugindoc_DATA = \
 	manual.rst
@@ -13,8 +16,15 @@ dist_pluginhtmldoc_DATA = \
 	manual.html
 
 if BUILD_RST
-manual.html: manual.rst manual.css html4css1.css
+manual-combined.css: $(MANUAL_CSS)
+	$(AM_V_GEN) cat $^ > $@
+manual.html: manual.rst manual-combined.css
 	$(AM_V_GEN) $(RST2HTML) -d --strict \
-		--stylesheet-path $(abs_srcdir)/html4css1.css,$(abs_srcdir)/manual.css \
+		--stylesheet-path manual-combined.css \
 		$(srcdir)/manual.rst $@
+
+CLEANFILES = \
+	manual-combined.css \
+	manual.html
+
 endif BUILD_RST
