--- a/.github/workflows/windows-msys2-build.yml
+++ b/.github/workflows/windows-msys2-build.yml
@@ -4,12 +4,19 @@ on: [workflow_dispatch]
 jobs:
   msys2-mingw64:
     runs-on: windows-latest
+    env:
+      GEANY_SOURCE_PATH: $(cygpath -u "${GITHUB_WORKSPACE}")/.geany_source
     defaults:
       run:
         shell: msys2 {0}
     steps:
-      - name: Checkout
+      - name: Checkout Geany-Plugins
         uses: actions/checkout@v4
+      - name: Checkout Geany
+        uses: actions/checkout@v4
+        with:
+          repository: giuspen/geany
+          path: ${{ env.GEANY_SOURCE_PATH }}
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
@@ -34,12 +41,31 @@ jobs:
             unzip
             dos2unix
             mingw-w64-x86_64-nsis
-      - name: GTK-Bundle
+      - name: GTK-Bundle-Geany
+        run: |
+          mkdir -p geany_build/bundle/geany-gtk
+          cd geany_build/bundle/geany-gtk
+          bash $(cygpath -u "${GITHUB_WORKSPACE}")/scripts/gtk-bundle-from-msys2.sh -3
+      - name: GTK-Bundle-Geany-Plugins
         run: |
           mkdir -p geany_build/bundle/geany-plugins-dependencies
           cd geany_build/bundle/geany-plugins-dependencies
           bash $(cygpath -u "${GITHUB_WORKSPACE}")/build/gtk-bundle-from-msys2.sh -3
-      - name: CI-Build
+      - name: CI-Build-Geany
+        run: |
+          DESTINATON=$(cygpath -u "${GITHUB_WORKSPACE}")/geany_build
+          cd ${{ env.GEANY_SOURCE_PATH }}
+          VERSION=$(grep 'AC_INIT' configure.ac | sed -E 's/AC_INIT\(\[[^]]+\],\s*\[([^]]+)\].*/\1/')
+          NOCONFIGURE=1 ./autogen.sh
+          export lt_cv_deplibs_check_method=${lt_cv_deplibs_check_method='pass_all'}
+          mkdir -p _build
+          cd _build
+          ../configure --prefix=${DESTINATON}/build/geany --disable-silent-rules
+          make -j
+          make install
+          mkdir -p ${DESTINATON}/release/geany-orig
+          rsync -a --delete ${DESTINATON}/build/geany/ ${DESTINATON}/release/geany-orig
+      - name: CI-Build-Geany-Plugins
         run: |
           DESTINATON=$(cygpath -u "${GITHUB_WORKSPACE}")/geany_build
           VERSION=$(grep 'AC_INIT' configure.ac | sed -E 's/AC_INIT\(\[[^]]+\],\s*\[([^]]+)\].*/\1/')
@@ -53,7 +79,11 @@ jobs:
           rm -rf ${DESTINATON}/release/geany-plugins-orig
           mkdir -p ${DESTINATON}/release/geany-plugins-orig
           rsync -a --delete ${DESTINATON}/build/geany-plugins/${DESTINATON}/build/geany/ ${DESTINATON}/release/geany-plugins-orig
-      - name: Compile NSIS
+      - name: Compile NSIS-Geany
+        run: |
+          cd ${{ env.GEANY_SOURCE_PATH }}
+          python scripts/msys2-geany-release.py
+      - name: Compile NSIS-Geany-Plugins
         run: |
           python build/msys2-geany-plugins-release.py
       - name: Upload Unsigned Artifact
