--- a/.github/workflows/windows-msys2-build.yml
+++ b/.github/workflows/windows-msys2-build.yml
@@ -4,8 +4,6 @@ on: [workflow_dispatch]
 jobs:
   msys2-mingw64:
     runs-on: windows-latest
-    env:
-      GEANY_SOURCE_PATH: ${{ github.workspace }}/.geany_source
     defaults:
       run:
         shell: msys2 {0}
@@ -16,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: giuspen/geany
-          path: ${{ env.GEANY_SOURCE_PATH }}
+          path: .geany_source
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
@@ -45,7 +43,7 @@ jobs:
         run: |
           mkdir -p geany_build/bundle/geany-gtk
           cd geany_build/bundle/geany-gtk
-          bash ${{ env.GEANY_SOURCE_PATH }}/scripts/gtk-bundle-from-msys2.sh -3
+          bash $(cygpath -u "${GITHUB_WORKSPACE}")/.geany_source/scripts/gtk-bundle-from-msys2.sh -3
       - name: GTK-Bundle-Geany-Plugins
         run: |
           mkdir -p geany_build/bundle/geany-plugins-dependencies
@@ -54,7 +52,7 @@ jobs:
       - name: CI-Build-Geany
         run: |
           DESTINATON=$(cygpath -u "${GITHUB_WORKSPACE}")/geany_build
-          cd ${{ env.GEANY_SOURCE_PATH }}
+          cd .geany_source
           VERSION=$(grep 'AC_INIT' configure.ac | sed -E 's/AC_INIT\(\[[^]]+\],\s*\[([^]]+)\].*/\1/')
           NOCONFIGURE=1 ./autogen.sh
           export lt_cv_deplibs_check_method=${lt_cv_deplibs_check_method='pass_all'}
@@ -81,7 +79,7 @@ jobs:
           rsync -a --delete ${DESTINATON}/build/geany-plugins/${DESTINATON}/build/geany/ ${DESTINATON}/release/geany-plugins-orig
       - name: Compile NSIS-Geany
         run: |
-          cd ${{ env.GEANY_SOURCE_PATH }}
+          cd .geany_source
           python scripts/msys2-geany-release.py
       - name: Compile NSIS-Geany-Plugins
         run: |
