Revert "test configure.ac newlini issue"
This reverts commit 21c827f19e3ef197388286e26f4e04b6b17ca5e2.

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,9 @@ GP_CHECK_XMLSNIPPETS
 
 GP_COMMIT_UTILSLIB_STATUS
 
-AC_CONFIG_FILES([Makefile po/Makefile.in])
+AC_CONFIG_FILES([
+    Makefile
+    po/Makefile.in
+])
 AC_OUTPUT
 GP_STATUS_PRINT
