test configure.ac issue (Gemini)

--- a/configure.ac
+++ b/configure.ac
@@ -79,118 +79,6 @@ GP_CHECK_XMLSNIPPETS
 
 GP_COMMIT_UTILSLIB_STATUS
 
-AC_CONFIG_FILES([
-    Makefile
-    po/Makefile.in
-    addons/Makefile
-    addons/src/Makefile
-    autoclose/Makefile
-    autoclose/src/Makefile
-    automark/Makefile
-    automark/src/Makefile
-    codenav/Makefile
-    codenav/src/Makefile
-    commander/Makefile
-    commander/src/Makefile
-    debugger/Makefile
-    debugger/src/Makefile
-    debugger/img/Makefile
-    defineformat/Makefile
-    defineformat/src/Makefile
-    geanyctags/Makefile
-    geanyctags/src/Makefile
-    geanydoc/Makefile
-    geanydoc/src/Makefile
-    geanydoc/tests/Makefile
-    geanyextrasel/Makefile
-    geanyextrasel/src/Makefile
-    geanygendoc/Makefile
-    geanygendoc/src/Makefile
-    geanygendoc/data/Makefile
-    geanygendoc/data/filetypes/Makefile
-    geanygendoc/docs/Makefile
-    geanyinsertnum/Makefile
-    geanyinsertnum/src/Makefile
-    geanylua/examples/edit/Makefile
-    geanylua/examples/scripting/Makefile
-    geanylua/examples/info/Makefile
-    geanylua/examples/work/Makefile
-    geanylua/examples/dialogs/Makefile
-    geanylua/examples/Makefile
-    geanylua/docs/Makefile
-    geanylua/Makefile
-    geanymacro/Makefile
-    geanymacro/src/Makefile
-    geanyminiscript/Makefile
-    geanyminiscript/src/Makefile
-    geanynumberedbookmarks/Makefile
-    geanynumberedbookmarks/src/Makefile
-    geanypg/Makefile
-    geanypg/src/Makefile
-    geanyprj/Makefile
-    geanyprj/src/Makefile
-    geanyvc/Makefile
-    geanyvc/src/Makefile
-    geniuspaste/Makefile
-    geniuspaste/data/Makefile
-    geniuspaste/src/Makefile
-    git-changebar/Makefile
-    git-changebar/data/Makefile
-    git-changebar/src/Makefile
-    keyrecord/Makefile
-    keyrecord/src/Makefile
-    latex/Makefile
-    latex/doc/Makefile
-    latex/src/Makefile
-    lineoperations/Makefile
-    lineoperations/src/Makefile
-    lipsum/Makefile
-    lipsum/src/Makefile
-    lsp/Makefile
-    lsp/deps/Makefile
-    lsp/src/Makefile
-    lsp/data/Makefile
-    markdown/Makefile
-    markdown/src/Makefile
-    markdown/docs/Makefile
-    markdown/peg-markdown/Makefile
-    markdown/peg-markdown/peg-0.1.9/Makefile
-    overview/Makefile
-    overview/data/Makefile
-    overview/overview/Makefile
-    pairtaghighlighter/Makefile
-    pairtaghighlighter/src/Makefile
-    pohelper/Makefile
-    pohelper/data/Makefile
-    pohelper/src/Makefile
-    pretty-printer/Makefile
-    pretty-printer/src/Makefile
-    projectorganizer/Makefile
-    projectorganizer/src/Makefile
-    scope/Makefile
-    scope/data/Makefile
-    scope/docs/Makefile
-    scope/src/Makefile
-    sendmail/Makefile
-    sendmail/src/Makefile
-    shiftcolumn/Makefile
-    shiftcolumn/src/Makefile
-    spellcheck/Makefile
-    spellcheck/src/Makefile
-    tableconvert/Makefile
-    tableconvert/src/Makefile
-    treebrowser/Makefile
-    treebrowser/src/Makefile
-    updatechecker/Makefile
-    updatechecker/src/Makefile
-    vimode/Makefile
-    vimode/src/Makefile
-    webhelper/Makefile
-    webhelper/src/Makefile
-    workbench/Makefile
-    workbench/src/Makefile
-    xmlsnippets/Makefile
-    xmlsnippets/src/Makefile
-])
+AC_CONFIG_FILES([Makefile, po/Makefile.in, addons/Makefile, addons/src/Makefile, autoclose/Makefile, autoclose/src/Makefile, automark/Makefile, automark/src/Makefile, codenav/Makefile, codenav/src/Makefile, commander/Makefile, commander/src/Makefile, debugger/Makefile, debugger/src/Makefile, debugger/img/Makefile, defineformat/Makefile, defineformat/src/Makefile, geanyctags/Makefile, geanyctags/src/Makefile, geanydoc/Makefile, geanydoc/src/Makefile, geanydoc/tests/Makefile, geanyextrasel/Makefile, geanyextrasel/src/Makefile, geanygendoc/Makefile, geanygendoc/src/Makefile, geanygendoc/data/Makefile, geanygendoc/data/filetypes/Makefile, geanygendoc/docs/Makefile, geanyinsertnum/Makefile, geanyinsertnum/src/Makefile, geanylua/examples/edit/Makefile, geanylua/examples/scripting/Makefile, geanylua/examples/info/Makefile, geanylua/examples/work/Makefile, geanylua/examples/dialogs/Makefile, geanylua/examples/Makefile, geanylua/docs/Makefile, geanylua/Makefile, geanymacro/Makefile, geanymacro/src/Makefile, geanyminiscript/Makefile, geanyminiscript/src/Makefile, geanynumberedbookmarks/Makefile, geanynumberedbookmarks/src/Makefile, geanypg/Makefile, geanypg/src/Makefile, geanyprj/Makefile, geanyprj/src/Makefile, geanyvc/Makefile, geanyvc/src/Makefile, geniuspaste/Makefile, geniuspaste/data/Makefile, geniuspaste/src/Makefile, git-changebar/Makefile, git-changebar/data/Makefile, git-changebar/src/Makefile, keyrecord/Makefile, keyrecord/src/Makefile, latex/Makefile, latex/doc/Makefile, latex/src/Makefile, lineoperations/Makefile, lineoperations/src/Makefile, lipsum/Makefile, lipsum/src/Makefile, lsp/Makefile, lsp/deps/Makefile, lsp/src/Makefile, lsp/data/Makefile, markdown/Makefile, markdown/src/Makefile, markdown/docs/Makefile, markdown/peg-markdown/Makefile, markdown/peg-markdown/peg-0.1.9/Makefile, overview/Makefile, overview/data/Makefile, overview/overview/Makefile, pairtaghighlighter/Makefile, pairtaghighlighter/src/Makefile, pohelper/Makefile, pohelper/data/Makefile, pohelper/src/Makefile, pretty-printer/Makefile, pretty-printer/src/Makefile, projectorganizer/Makefile, projectorganizer/src/Makefile, scope/Makefile, scope/data/Makefile, scope/docs/Makefile, scope/src/Makefile, sendmail/Makefile, sendmail/src/Makefile, shiftcolumn/Makefile, shiftcolumn/src/Makefile, spellcheck/Makefile, spellcheck/src/Makefile, tableconvert/Makefile, tableconvert/src/Makefile, treebrowser/Makefile, treebrowser/src/Makefile, updatechecker/Makefile, updatechecker/src/Makefile, vimode/Makefile, vimode/src/Makefile, webhelper/Makefile, webhelper/src/Makefile, workbench/Makefile, workbench/src/Makefile, xmlsnippets/Makefile, xmlsnippets/src/Makefile])
 AC_OUTPUT
 GP_STATUS_PRINT
