--- a/.github/workflows/windows-msys2-build.yml
+++ b/.github/workflows/windows-msys2-build.yml
@@ -39,11 +39,6 @@ jobs:
             unzip
             dos2unix
             mingw-w64-x86_64-nsis
-      - name: GTK-Bundle-Geany
-        run: |
-          mkdir -p geany_build/bundle/geany-gtk
-          cd geany_build/bundle/geany-gtk
-          bash $(cygpath -u "${GITHUB_WORKSPACE}")/.geany_source/scripts/gtk-bundle-from-msys2.sh -3
       - name: GTK-Bundle-Geany-Plugins
         run: |
           mkdir -p geany_build/bundle/geany-plugins-dependencies
@@ -77,11 +72,6 @@ jobs:
           rm -rf ${DESTINATON}/release/geany-plugins-orig
           mkdir -p ${DESTINATON}/release/geany-plugins-orig
           rsync -a --delete ${DESTINATON}/build/geany-plugins/${DESTINATON}/build/geany/ ${DESTINATON}/release/geany-plugins-orig
-      - name: Compile NSIS-Geany
-        run: |
-          cd .geany_source
-          VERSION=$(autom4te --no-cache --language=Autoconf-without-aclocal-m4 --trace AC_INIT:\$2 configure.ac)
-          python scripts/msys2-geany-release.py ${VERSION}
       - name: Compile NSIS-Geany-Plugins
         run: |
           VERSION=$(autom4te --no-cache --language=Autoconf-without-aclocal-m4 --trace AC_INIT:\$2 configure.ac)
@@ -90,8 +80,8 @@ jobs:
         id: upload-unsigned-artifact
         uses: actions/upload-artifact@v4
         with:
-          path: |
-            geany_build/*.exe
+          name: geany-plugins-unsigned
+          path: geany_build/*.exe
           retention-days: 3
           overwrite: true
           if-no-files-found: error
